--- a/web.css
+++ b/web.css
@@ -28,7 +28,7 @@ body {
 }
 
 /* Menú desplegable */
-.menu select {
+.menu  {
     margin-top: 1rem;
     background-color: #222;
     color: #00ff88;
@@ -43,12 +43,12 @@ body {
     box-shadow: 0 0 10px rgba(0, 255, 136, 0.2);
 }
 
-.menu select:hover {
+.menu :hover {
     background-color: #333;
     box-shadow: 0 0 15px rgba(0, 255, 136, 0.4);
 }
 
-.menu select option {
+.menu option {
     background-color: #111;
     color: #00ff88;
 }
