--- a/gabito.css
+++ b/gabito.css
@@ -21,13 +21,13 @@ header {
 
 .menu li a {
     text-decoration: none;
-    color: #eee;
+    color: #442e0f;
     font-weight: bold;
     transition: color 0.3s ease;
 }
 
 .menu li a:hover {
-    color: #f39c12;
+    color: #442e0f;
 }
 h1 {
     margin: 0;
