--- a/gabito.css
+++ b/gabito.css
@@ -26,7 +26,7 @@ header {
 }
 
 .menu a {
-    color: #f5f5f5;
+    color: #333;
     text-decoration: none;
     font-weight: bold;
     padding: 8px 12px;
