--- a/gabito.css
+++ b/gabito.css
@@ -12,33 +12,24 @@ header {
     text-align: center;
     animation: fadeInDown 1s ease;
 }
-  .menu{
-   list-style: none;
+  .menu {
+    list-style: none;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 10px 0;
+    gap: 2rem;
 }
 
-.menu li {
-    margin: 0 15px;
-}
-
-.menu a {
-    color: #333;
+.menu li a {
     text-decoration: none;
+    color: #eee;
     font-weight: bold;
-    padding: 8px 12px;
-    border-radius: 4px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: color 0.3s ease;
 }
 
-.menu a:hover {
-    background-color: #00ffae;
-    color: #0e0e0e;
-    transform: scale(1.1);
+.menu li a:hover {
+    color: #f39c12;
 }
+
 h1 {
     margin: 0;
     color: #442e0f;
